--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "A CBT platform application",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
@@ -12,8 +12,8 @@
     "mongoose": "nodemon ./database/mongoose.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["CBT","Nurses","NHS","UK","Canada nurses","UK nurses","Nurses abroad","work abroad as nurse","work in UK as a nurses"],
+  "author": "Addo Constant",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
